--- a/css/theme_colorful.css
+++ b/css/theme_colorful.css
@@ -1,9 +1,12 @@
-nav{
-	opacity: .95 !important;
+nav {
+  opacity: .8 !important;
 }
-menu,#main{
-	opacity: 1 !important;
+
+menu,
+#main {
+  opacity: 1 !important;
 }
-#top{
-	display: block;
+
+#top {
+  display: block;
 }
