--- a/css/inject/homepage.css
+++ b/css/inject/homepage.css
@@ -1,289 +1,332 @@
-smartup.su_apps#su_apps_homepage .su_homepage_box{
-	width: 550px;
-	min-height: 120px;
-	padding: 8px;
+smartup.su_apps#su_apps_homepage .su_homepage_box {
+  width: 550px;
+  min-height: 120px;
+  padding: 8px;
 }
+
 smartup.su_apps#su_apps_homepage ul,
-smartup.su_apps#su_apps_homepage li{
-	text-align: left;
+smartup.su_apps#su_apps_homepage li {
+  text-align: left;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_cp{
-	display: block;
-	/* float: left; */
-	font-size: 10px;
-	color: #ccc;
-	text-align: right;
-	width: auto;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	padding: 0 8px 2px 0;
-	box-sizing: border-box;
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	text-shadow: 0.5px 0.5px 0 #000000;
-}
-smartup.su_apps#su_apps_homepage ul{
-	/*padding: 10px;*/
-	width: 100%;
-	text-align: center;
-	padding-bottom: 8px;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_li{
-    float: left;
-    list-style: none;
-    list-style-type: none;
-    margin: 2px;
-    cursor: pointer;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_li div{
-	width: 160px;
-	height: 32px;
-	line-height: 32px;
-	display: block;
-	padding: 2px 8px;
-    border-radius: 2px;
-    border: 1px solid #ccf;
-    background-color: rgba(255,255,255,.7);
-    transition:all .4s ease-in-out;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_li div:hover{
-	background-color: rgba(255,255,255,.9);
-	background-color: #fff;
-	border: 1px solid #ccc;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_li div img{
-	position: absolute;
-	margin-top: 7px;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_li div span{
-    color: #000;
-    font-size: 12px;
-    margin: 0;
-    /*margin-left: 24px;*/
-    display: block;
-    overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_listbox{
-	background-color: rgb(231, 233, 253);
-	height: 100%;
-	width: 200px;
-	position: absolute;
-	left: 0;
-	top: 0;
-	opacity: 0.9;
-	overflow: hidden auto;
-	z-index: 100;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_listul{
-	list-style-type: none;
-	margin: 0 0 0 -8px;
-	padding: 2px 0;
-	background: #e7e9fd;
-	transition:all .4s ease-in-out;
-	opacity: 1;
 
-	position: absolute;
-	height: calc(100% - 40px);
-	left: 0;
-	top: 0;
-	overflow-y: auto;
-	overflow-x: hidden;
-	margin: 0;
+smartup.su_apps#su_apps_homepage .su_homepage_cp {
+  display: block;
+  /* float: left; */
+  font-size: 10px;
+  color: #ccc;
+  text-align: right;
+  width: auto;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding: 0 8px 2px 0;
+  box-sizing: border-box;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  text-shadow: 0.5px 0.5px 0 #000000;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_list{
-	transition:all .4s ease-out;
+
+smartup.su_apps#su_apps_homepage ul {
+  /*padding: 10px;*/
+  width: 100%;
+  text-align: center;
+  padding-bottom: 8px;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_list:hover{
-	transition:all .4s ease-out;
-	background: #a6baff;
-	color: #3f51b5;
+
+smartup.su_apps#su_apps_homepage .su_homepage_li {
+  float: left;
+  list-style: none;
+  list-style-type: none;
+  margin: 2px;
+  cursor: pointer;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_listli{
-	/*transition:all .3s ease-out;*/
-	text-align: right;
-	width: 100%;
-	height: 30px;
-	line-height: 30px;
-	font-size: 14px;
-	cursor: pointer;
-	margin: 2px 0;
-	padding-right: 8px;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+
+smartup.su_apps#su_apps_homepage .su_homepage_li div {
+  width: 160px;
+  height: 32px;
+  line-height: 32px;
+  display: block;
+  padding: 2px 8px;
+  border-radius: 2px;
+  border: 1px solid #ccf;
+  background-color: rgba(255, 255, 255, .7);
+  transition: all .4s ease-in-out;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_listli:hover .su_homepage_listbtndel{
-	margin-left: 0px;
+
+smartup.su_apps#su_apps_homepage .su_homepage_li div:hover {
+  background-color: rgba(255, 255, 255, .9);
+  background-color: #fff;
+  border: 1px solid #ccc;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_listli:hover .su_homepage_listbtndel:hover{
-	background-color: red;
+
+smartup.su_apps#su_apps_homepage .su_homepage_li div img {
+  position: absolute;
+  margin-top: 7px;
 }
+
+smartup.su_apps#su_apps_homepage .su_homepage_li div span {
+  color: #000;
+  font-size: 12px;
+  margin: 0;
+  /*margin-left: 24px;*/
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_listbox {
+  background-color: rgb(231, 233, 253);
+  height: 100%;
+  width: 200px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0.9;
+  overflow: hidden auto;
+  z-index: 100;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_listul {
+  list-style-type: none;
+  margin: 0 0 0 -8px;
+  padding: 2px 0;
+  background: #e7e9fd;
+  transition: all .4s ease-in-out;
+  opacity: 1;
+
+  position: absolute;
+  height: calc(100% - 40px);
+  left: 0;
+  top: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin: 0;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_list {
+  transition: all .4s ease-out;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_list:hover {
+  transition: all .4s ease-out;
+  background: #a6baff;
+  color: #3f51b5;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_listli {
+  /*transition:all .3s ease-out;*/
+  text-align: right;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  font-size: 14px;
+  cursor: pointer;
+  margin: 2px 0;
+  padding-right: 8px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_listli:hover .su_homepage_listbtndel {
+  margin-left: 0px;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_listli:hover .su_homepage_listbtndel:hover {
+  background-color: red;
+}
+
 /*smartup.su_apps#su_apps_homepage .su_homepage_listli:hover,*/
-smartup.su_apps#su_apps_homepage .su_homepage_listlicur{
-	background: #a6baff;
-	color: #3f51b5;
-	/*border-right: 3px solid #5677fc !important;*/
-	transition:all .3s ease-out;
+smartup.su_apps#su_apps_homepage .su_homepage_listlicur {
+  background: #a6baff;
+  color: #3f51b5;
+  /*border-right: 3px solid #5677fc !important;*/
+  transition: all .3s ease-out;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_listlicur{
-	color: #3f51b5;
-	font-weight: bold;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_listaddbox{
-	border: 1px #fff0 solid;
-	border-radius: 20px;	
-}
-smartup.su_apps#su_apps_homepage .su_homepage_listaddbox:hover{
-	border-color: #fff;
-	cursor: pointer;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_listaddvaluebox{
-	display: none;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_listaddtext{
-	width: 80px;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_listaddbtn{
-	border-top: 1px solid #d0d9ff;
-	width: 100%;
-	padding: 10px 0px 10px 32px;
-	position: absolute;
-	bottom: 0;
-	background: #e7e9fd;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_listaddbtn:hover{	
-	cursor: pointer;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_item{
-	overflow: hidden;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_item:hover .su_homepage_itembtndel{
-	margin-right: -8px !important;
-	position: relative;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_item:hover .su_homepage_itembtndel:hover{
-	background-color: red;
-}
-smartup.su_apps#su_apps_homepage .su_homepage_itemadd{
-	font-weight: bold;
-	overflow: hidden;
-    float: left;
-    list-style: none;
-    list-style-type: none;
-    margin: 2px;
-    cursor: pointer;
 
-	width: 160px;
-	height: 32px;
-	line-height: 32px;
-	display: block;
-	padding: 2px 8px;
-    border-radius: 2px;
-    border: 1px solid #ccf;
-    background-color: rgba(255,255,255,.7);
-    transition:all .4s ease-in-out;
+smartup.su_apps#su_apps_homepage .su_homepage_listlicur {
+  color: #3f51b5;
+  font-weight: bold;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_itemadd:hover{
-	background-color: rgba(255,255,255,.9);
-	background-color: #fff;
-	background-color: /*#ff7600bf*/;
-	border: 1px solid #ccc;
+
+smartup.su_apps#su_apps_homepage .su_homepage_listaddbox {
+  border: 1px #fff0 solid;
+  border-radius: 20px;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_itemaddbox{
-	width: 360px;
-	height: auto;
-	padding: 4px;
-	background: #cef;
-	margin: 0 auto;
-	position: absolute;
-	right: 12px;
-	top: 12px;
-	border-radius: 2px;
+
+smartup.su_apps#su_apps_homepage .su_homepage_listaddbox:hover {
+  border-color: #fff;
+  cursor: pointer;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_itembtndel{
-	transition:all .3s ease-out;
-	float: right;
-	margin: -34px -44px 0 0 !important;
-	width: 36px;
-	height: 36px;
-	text-align: center;
-	background: rgba(0, 0, 0, 0.5);
-	color: white !important;
-	font-size: 16px !important;
+
+smartup.su_apps#su_apps_homepage .su_homepage_listaddvaluebox {
+  display: none;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_boxbtnclose{
-	position: absolute;
-	right: 0;
-	top: 0;
-	padding: 2px;
+
+smartup.su_apps#su_apps_homepage .su_homepage_listaddtext {
+  width: 80px;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_addboxmain{
-	width: 360px;
+
+smartup.su_apps#su_apps_homepage .su_homepage_listaddbtn {
+  border-top: 1px solid #d0d9ff;
+  width: 100%;
+  padding: 10px 0px 10px 32px;
+  position: absolute;
+  bottom: 0;
+  background: #e7e9fd;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_addboxlabel{
-	width: 120px;
-	display: inline-block;
-	text-align: right;
+
+smartup.su_apps#su_apps_homepage .su_homepage_listaddbtn:hover {
+  cursor: pointer;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_boxgroup{
-	width: 120px;
+
+smartup.su_apps#su_apps_homepage .su_homepage_item {
+  overflow: hidden;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_addboxbtn{
-	text-align: center;
-	margin: 8px 0;
+
+smartup.su_apps#su_apps_homepage .su_homepage_item:hover .su_homepage_itembtndel {
+  margin-right: -8px !important;
+  position: relative;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_listbtndel{
-	transition:all .3s ease-out;
-	float: left;
-	width: 24px;
-	text-align: center;
-	margin-left: -24px;
-	background: rgba(0, 0, 0, 0.5);
-	color: white !important;
-	font-size: 16px !important;
+
+smartup.su_apps#su_apps_homepage .su_homepage_item:hover .su_homepage_itembtndel:hover {
+  background-color: red;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_editbg{
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.5);
-	position: absolute;
-	left: 0;
-	top: 0;
-	z-index: 101;
+
+smartup.su_apps#su_apps_homepage .su_homepage_itemadd {
+  font-weight: bold;
+  overflow: hidden;
+  float: left;
+  list-style: none;
+  list-style-type: none;
+  margin: 2px;
+  cursor: pointer;
+
+  width: 160px;
+  height: 32px;
+  line-height: 32px;
+  display: block;
+  padding: 2px 8px;
+  border-radius: 2px;
+  border: 1px solid #ccf;
+  background-color: rgba(255, 255, 255, .7);
+  transition: all .4s ease-in-out;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_editbox{
-	margin: 0 auto;
-	width: auto;
-	height: auto;
-	top: 48px;
-	left: 120px;
-	padding: 4px;
-	background: #cef;
-	margin: 0 auto;
-	position: absolute;
-	border-radius: 2px;
-	z-index: 102;
+
+smartup.su_apps#su_apps_homepage .su_homepage_itemadd:hover {
+  background-color: rgba(255, 255, 255, .9);
+  background-color: #fff;
+  background-color: /*#ff7600bf*/;
+  border: 1px solid #ccc;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_editmode{
-	background-color: #8856fc;
+
+smartup.su_apps#su_apps_homepage .su_homepage_itemaddbox {
+  width: 360px;
+  height: auto;
+  padding: 4px;
+  background: #cef;
+  margin: 0 auto;
+  position: absolute;
+  right: 12px;
+  top: 12px;
+  border-radius: 2px;
 }
-smartup.su_apps#su_apps_homepage .su_homepage_listitembox{
-	margin: 16px -8px;
+
+smartup.su_apps#su_apps_homepage .su_homepage_itembtndel {
+  transition: all .3s ease-out;
+  float: right;
+  margin: -34px -44px 0 0 !important;
+  width: 36px;
+  height: 36px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.5);
+  color: white !important;
+  font-size: 16px !important;
 }
-smartup.su_apps#su_apps_homepage .su_sortable_item{
-	background-color: #ff7600bf;
-	background: #cccccc33;
+
+smartup.su_apps#su_apps_homepage .su_homepage_boxbtnclose {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 2px;
 }
-smartup.su_apps#su_apps_homepage .su_sortable_item>div{
-	border: 1px dashed #ccc;
-	background: #cccccc33;
+
+smartup.su_apps#su_apps_homepage .su_homepage_addboxmain {
+  width: 360px;
 }
-smartup.su_apps#su_apps_homepage .su_sortable_list{
-	border: 1px dashed #ccc;
-	background-color: #ff760033;
-	/*background: #cccccc33;*/
+
+smartup.su_apps#su_apps_homepage .su_homepage_addboxlabel {
+  width: 120px;
+  display: inline-block;
+  text-align: right;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_boxgroup {
+  width: 120px;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_addboxbtn {
+  text-align: center;
+  margin: 8px 0;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_listbtndel {
+  transition: all .3s ease-out;
+  float: left;
+  width: 24px;
+  text-align: center;
+  margin-left: -24px;
+  background: rgba(0, 0, 0, 0.5);
+  color: white !important;
+  font-size: 16px !important;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_editbg {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 101;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_editbox {
+  margin: 0 auto;
+  width: auto;
+  height: auto;
+  top: 48px;
+  left: 120px;
+  padding: 4px;
+  background: #cef;
+  margin: 0 auto;
+  position: absolute;
+  border-radius: 2px;
+  z-index: 102;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_editmode {
+  background-color: #8856fc;
+}
+
+smartup.su_apps#su_apps_homepage .su_homepage_listitembox {
+  margin: 16px -8px;
+}
+
+smartup.su_apps#su_apps_homepage .su_sortable_item {
+  background-color: #ff7600bf;
+  background: #cccccc33;
+}
+
+smartup.su_apps#su_apps_homepage .su_sortable_item > div {
+  border: 1px dashed #ccc;
+  background: #cccccc33;
+}
+
+smartup.su_apps#su_apps_homepage .su_sortable_list {
+  border: 1px dashed #ccc;
+  background-color: #ff760033;
+  /*background: #cccccc33;*/
 }
