--- a/css/options.css
+++ b/css/options.css
@@ -64,7 +64,7 @@ i {
 input[type=range] {
   width: 160px;
   height: 1px;
-  background: #5677fc;
+  background: #fcc356;
   /*rgba(75, 75, 75, 0.8) !important; */
   border: 1px solid transparent;
   border-radius: 5px;
@@ -287,7 +287,7 @@ menu #menu_name {
   float: left;
   font-size: 38px;
   font-weight: bold;
-  color: #5677fc;
+  color: #e5a42d;
   line-height: 60px;
   padding: 10px;
   display: none;
@@ -386,7 +386,7 @@ menu #menu_bottom:hover img {
 
 #btn_add:hover,
 .btn_list:hover {
-  background-color: #d0d9ff;
+  background-color: #ffecd0;
 }
 
 #btn_add {
@@ -403,7 +403,7 @@ menu #menu_bottom:hover img {
   transition: background-color-color .2s ease-in-out;
   width: 40px !important;
   padding: 0 !important;
-  background: #5677fc;
+  background: #f9c361;
   margin-right: 100%;
   color: #fff !important;
   box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.26);
@@ -417,7 +417,7 @@ menu #menu_bottom:hover img {
 .btn_engine:hover,
 .btn_script:hover {
   background-color: #fff;
-  color: #5677fc !important;
+  color: #fcaf56 !important;
 }
 
 smartup {
@@ -427,9 +427,9 @@ smartup.su_apps {
   position: fixed;
   left: 300px;
   top: 0;
-  background-color: #d0d9ff;
+  background-color: #ffecd0;
   z-index: 1000;
-  border: 1px solid #5677fc;
+  border: 1px solid #ffecd0;
   border-radius: 2px;
   opacity: 0;
   transition: all .4s ease-in-out;
@@ -443,7 +443,7 @@ smartup.su_apps {
   top: 0;
   width: 100%;
   height: 120px;
-  background: #5677fc;
+  background: #fcaf56;
   font-weight: bold;
   font-size: 16px;
   color: #fff;
@@ -610,7 +610,7 @@ smartup.su_apps {
 .item {
   height: auto;
   width: 200px;
-  border: 1px solid #cccccc;
+  border: 1px solid #e3e3e3;
   opacity: 1;
 }
 
@@ -627,12 +627,12 @@ smartup.su_apps {
 }
 
 .item:hover {
-  background: #5677fc;
+  background: #fcaf56;
   transition: all .4s ease-in-out;
   color: #fff;
   font-weight: bold;
   border: 1px solid transparent;
-  box-shadow: 4px 4px 1px #3b50ce;
+  box-shadow: 4px 4px 1px #fcaf56;
 }
 
 .item:hover .item_del {
@@ -812,7 +812,7 @@ smartup.su_apps {
   left: 0px;
   background: #fff;
   margin-bottom: 10px;
-  /*transition:all .4s ease-in-out;*/
+  /*transition: all .4s ease-in-out;*/
 }
 
 .menuplus {
@@ -1264,7 +1264,7 @@ smartup.su_apps {
   margin-top: 5px;
   width: 218px;
   height: 65px;
-  border: 1px solid rgba(115, 143, 254, 0.7);
+  border: 1px solid rgb(252, 175, 86);
 }
 
 .box-close {
@@ -1329,10 +1329,10 @@ smartup.su_apps {
   min-width: 280px !important;
   height: 35px;
   margin-top: 1px;
-  border: 1px solid #738ffe;
+  border: 1px solid #fcaf56;
   font-size: 16px;
   font-weight: bold;
-  color: #738ffe;
+  color: #fcaf56;
 }
 
 .box_select {
@@ -1384,7 +1384,7 @@ smartup.su_apps {
 .testbox {
   height: 200px;
   width: 400px;
-  border: 1px solid #d0d9ff;
+  border: 1px solid #ffecd0;
   border-radius: 5px;
   padding: 10px;
   user-select: text;
@@ -1406,39 +1406,13 @@ smartup.su_apps {
 }
 
 .uibox:hover {
-  border-left: 1px solid #d0d9ff;
+  border-left: 1px solid #ffecd0;
 }
 
-/*.uirange[type=range]{
-	width: 140px;
-	height: 1px;
-	background: #5677fc;
-	rgba(75, 75, 75, 0.8) !important;
-	border: 1px solid transparent;
-	border-radius: 5px;
-	-webkit-user-select: none;
-	-webkit-appearance: none !important; }
-.uirange:focus{ outline:none }
-.uirange[type=range]::-webkit-slider-thumb{
-	width: 15px;
-	height: 15px;
-	border-radius:100%;
-	background: #e7e9fd;
-	border: 1px solid #d0d9ff;
-	box-shadow: 1px 1px 1px #000;
-	-webkit-user-select: none;
-	-webkit-appearance: none !important;
 
-	width: 28px;
-	height: 12px;
-	border-radius: 6px;
-	background: #5677fc;
-	box-shadow: none;
-	margin-bottom: 1px;
-}*/
 .uirangebox {
   margin: 0 5px;
-  border-bottom: 1px solid #d0d9ff;
+  border-bottom: 1px solid #fff2d0;
   width: 30px !important;
   display: inline-block;
   text-align: center;
@@ -1466,7 +1440,7 @@ smartup.su_apps {
 }
 
 .confarea {
-  border: 1px solid #d0d9ff;
+  border: 1px solid #ffecd0;
   border-radius: 2px;
   min-height: 0;
   width: 80px;
@@ -1510,8 +1484,8 @@ select {
 }
 
 select optgroup {
-  color: #5677fc;
-  background: #d0d9ff;
+  color: #fcaf56;
+  background: #ffecd0;
   font-weight: bold;
 
 }
@@ -1522,7 +1496,7 @@ select optgroup > option {
 }
 
 input[type=text] {
-  border: 1px solid #d0d9ff;
+  border: 1px solid #fff7d0;
   height: 26px;
   border-radius: 3px;
   min-width: 160px;
@@ -1539,7 +1513,7 @@ input[type=button] {
   cursor: pointer;
   text-align: center;
   transition: background-color-color .2s ease-in-out;
-  color: #5677fc;
+  color: #d89c2f;
   padding: 0 8px;
   margin: 0 5px;
   border-radius: 2px;
@@ -1552,23 +1526,23 @@ input[type=button] {
 
 input[type=button]:hover {
   color: #fff;
-  background: #5677fc;
+  background: #d89c2f;
 }
 
 input[type=button]:active {
   position: relative;
   top: 1px;
-  background: rgba(86, 119, 252, 0.4);
+  background: rgb(252, 175, 86);
 }
 
 input[type=file] {
-  border: 1px solid #ccf;
+  border: 1px solid #e8e8e8;
   border-radius: 3px;
   padding: 2px 10px;
 }
 
 textarea {
-  border: 1px solid #d0d9ff;
+  border: 1px solid #e8e8e8;
   border-radius: 3px;
   padding: 0 10px;
 }
@@ -1862,7 +1836,7 @@ summary:hover {
   cursor: pointer;
   text-align: center;
   transition: background-color-color .2s ease-in-out;
-  color: #5677fc;
+  color: #d89c2f;
   padding: 0 8px;
   margin: 0 5px;
   border-radius: 2px;
@@ -1876,7 +1850,7 @@ summary:hover {
 #btn_export:hover {
   cursor: pointer;
   color: #fff;
-  background: #5677fc;
+  background: #d89c2f;
 }
 
 .label_br {
@@ -1928,12 +1902,12 @@ summary:hover {
   width: 200px;
   height: 40px;
   line-height: 40px;
-  border: 1px solid #ccf;
+  border: 1px solid #f5ebae;
   margin: 5px;
   padding: 2px 10px;
   float: left;
   border-radius: 2px;
-  border: 1px dashed #ccf;
+  border: 1px dashed #f5ebae;
 }
 
 .box_unit {
@@ -2362,11 +2336,11 @@ menu #menu_donate span {
 }
 
 .box_submit {
-  background-color: #8e99f3;
+  /*background-color: #8e99f3;*/
 }
 
 .box_head {
-  background-color: #5c6bc0;
+  background-color: #fcaf56;
 }
 
 smartup.su_apps {
