--- a/css/popup.css
+++ b/css/popup.css
@@ -25,7 +25,7 @@ body li {
 
 select {
   border-radius: 3px;
-  border: 1px solid #d0d9ff;
+  border: 1px solid #fcf5cb;
   height: 26px;
   padding: 0 5px;
   min-width: 100px;
@@ -49,15 +49,14 @@ select {
 
 .menu_item:hover {
   cursor: pointer;
-  background: #a6baff;
+  background: #f8e6c4;
 }
 
 .menu_item .action_select {
   border-radius: 0;
   width: 200px;
   height: 30px;
-  margin: 0 5px;
   border: none;
-  border-bottom: 1px solid rgba(58, 58, 228, 0.48);
+  border-bottom: 1px solid #ad7e12;
   margin: 5px auto;
 }
