--- a/css/inject/autoreload.css
+++ b/css/inject/autoreload.css
@@ -42,7 +42,7 @@ smartup.su_apps#su_apps_autoreload #su_autoreload_countdownbox {
   position: absolute;
   top: 32px;
   right: 16px;
-  background-color: #597afc;
+  background-color: #fcaf56;
   color: #fff;
   font-weight: bold;
 }
